syntax = "proto2";

option go_package = "./protopb";

import "google/protobuf/empty.proto";

message Credit {
  required string cast = 1;
  required int64 id = 2;
  optional string clientId = 3;
  optional bool eof = 4;
}

service CreditService {
  rpc StreamCredits (stream Credit) returns (google.protobuf.Empty);
}
